fixes #137, Formatting issue / text overlaps when multiple ad sizes attached to line item

--- a/app/assets/stylesheets/lineitem.css.scss
+++ b/app/assets/stylesheets/lineitem.css.scss
@@ -109,3 +109,7 @@ form fieldset {
 .lineitem-details {
   padding: 5px 10px;
 }
+
+.lineitem-sizes {
+  word-wrap: break-word;
+}
